22. If user is using menubar colouring, and this would require changing the text
    colour, then need to modify the user's userChrome.css for this - regardless
    of the QTC_MODIFY_MOZILLA cmake option.
23. If editing/creating userChrome.css and chrome folder does not exist, then
    create it.
24. Theme icon view selections.
25. Theme entry progress.

0.69.2
------
1. If a scrollbar slider is maxed-out, then shade it as disabled - matches KDE.
2. When detecting Ctrl-Alt-M for menubar hiding, check for uppercase M
   as well as lower case. Also, ignore state of shift and caps-lock keys.
3. Set default contrast to 7

0.69.1
------
1. Fix glow-style mouse over for combos with coloured buttons.
2. Improve appearance of plastik style mouse-over on scrollbar sliders.

0.69.0
------
1. Add option to control whether bottom tabs should have their gradient
   shades inverted.
2. Config files now stored under $XDG_CONFIG_HOME/qtcurve (e.g. ~/.config/qtcurve)
3. Fix some issue with 'flat' appearance.
4. Add an experimental option to hide/unhide menubars using Ctrl-Alt-M.
5. Respect double arrow setting for non-editable combos on more Gtk2
   combo types. (Affects combos in pidgin.)
6. Colour arrows on mouse over of non-editable combos on more Gtk2
   combo types. (Affects combos in pidgin.)
7. Fix disabled editable combos.
8. It has been reported that under intel Xorg drivers > 2.8, that QtCurve's
   arrows are not appearing. This seems to be due to the fact that QtCurve is
   using cairo to draw non-antialised lines in this case. To work-around this
   issue QtCurve has been changed to use the older Gdk to draw arrows. To
   revert back to cairo, use the following cmake option:

    -DQTC_USE_CAIRO_FOR_ARROWS=true

0.68.1
------
1. Fix reading of 'dark inverted gradient' setting.
2. Allow toggle buttons to be max rounded.
3. Fix combo-box arrow position when not etched/shadowed.
4. Fix default value for 'double Gtk combo arrow' setting.