@@ -1,0 +1,64 @@
+# Edit this file to change the default KDE4 settings of QtCurve
+[ColorEffects:Disabled]
+Color=112,111,110
+ColorAmount=0
+ColorEffect=0
+ContrastAmount=0.65
+ContrastEffect=1
+IntensityAmount=0.1
+IntensityEffect=2
+
+[ColorEffects:Inactive]
+Color=112,111,110
+ColorAmount=0.025
+ColorEffect=-2
+ContrastAmount=0.1
+ContrastEffect=-2
+Enable=false
+IntensityAmount=0
+IntensityEffect=0
+
+[Colors:Button]
+BackgroundNormal=232,231,230
+DecorationFocus=43,116,199
+DecorationHover=119,183,255
+ForegroundNormal=20,19,18
+
+[Colors:Selection]
+BackgroundNormal=65,139,212
+ForegroundNormal=255,255,255
+
+[Colors:Tooltip]
+BackgroundNormal=192,218,255
+ForegroundNormal=20,19,18
+
+[Colors:View]
+BackgroundAlternate=248,247,246
+BackgroundNormal=255,255,255
+ForegroundNormal=20,19,18
+
+[Colors:Window]
+BackgroundNormal=224,223,222
+ForegroundNormal=20,19,18
+
+[General]
+font=Sans Serif,10,-1,5,50,0,0,0,0,0
+menuFont=Sans Serif,10,-1,5,50,0,0,0,0,0
+toolBarFont=Sans Serif,8,-1,5,50,0,0,0,0,0
+shadeSortColumn=false
+
+[Icons]
+Theme=oxygen
+
+[KDE]
+ShowIconsOnPushButtons=true
+contrast=7
+
+[MainToolbarIcons]
+Size=22
+
+[SmallIcons]
+Size=16
+
+[Toolbar style]
+ToolButtonStyle=TextUnderIcon
